<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.omnyom.yumyum.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.omnyom.yumyum.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <activity
        android:id="@+id/navigation_profile"
        android:name="com.omnyom.yumyum.ui.camera.CameraActivity"
        android:label="@string/title_profile"
        tools:layout="@layout/activity_camera" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_profile"-->
<!--        android:name="com.omnyom.yumyum.ui.share.ShareFragment"-->
<!--        android:label="@string/title_profile"-->
<!--        tools:layout="@layout/fragment_share" />-->
</navigation>