<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/tv_sign_up_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title_sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/sign_up_title_size"/>

    <ImageButton
        android:id="@+id/btn_add_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_add_profile"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="@dimen/text_input_height"
        android:layout_height="@dimen/text_input_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_profile"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:text="@string/name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_height"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_name"
        android:hint="@string/please_write_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_introduction"
        android:layout_width="@dimen/text_input_height"
        android:layout_height="@dimen/text_input_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="12dp"
        android:gravity="center"
        android:text="@string/introduction"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_introduction"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_height"
        app:layout_constraintStart_toEndOf="@id/tv_introduction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_introduction"
        android:hint="@string/please_write_introduction">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_introduction"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:text="@string/complete"
        android:onClick="startMainActivity"/>


</androidx.constraintlayout.widget.ConstraintLayout>